--- a/src/components/AQIChart/CityChart.module.css
+++ b/src/components/AQIChart/CityChart.module.css
@@ -5,7 +5,14 @@
   background-color: #fdfbfb;
   border: 1px solid #f4f1f1;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 1rem;
+  height: 500px;
+}
+
+.cityDetails {
+  margin: 0;
+  margin-bottom: 1rem;
+  text-align: left;
 }
 
 @media only screen and (max-width: 600px) {
