Change page title and background color

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,6 +4,10 @@
   flex-direction: column;
 }
 
+.App h2 {
+  color: white;
+}
+
 .AQIContainer {
   display: grid;
   grid-template-columns: 50% 60%;
