--- a/src/components/AQITable/AQITable.module.css
+++ b/src/components/AQITable/AQITable.module.css
@@ -6,7 +6,8 @@ table, th, td {
   margin: 0;
   padding: 1rem;
   margin: auto;
-  border: 1px solid black;
+  border: 1px solid white;
   border-collapse: collapse;
   cursor: pointer;
+  color: white;
 }
